--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/css/livingBoard.css
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/css/livingBoard.css
@@ -4,6 +4,6 @@
 }
 
 .PaneforParquet {
-    -fx-background-image: url("../misc/sfondoparquet.jpg");
+    -fx-background-image: url("../misc/scene_background.png");
     -fx-background-size: stretch;
 }
