--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/AddressIp_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/AddressIp_scene.fxml
@@ -5,8 +5,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
@@ -16,38 +14,9 @@
     <children>
         <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1510.0">
             <children>
-                <VBox minHeight="-Infinity" minWidth="-Infinity" prefHeight="194.0" prefWidth="1503.0">
-                    <children>
-                        <HBox alignment="CENTER" minWidth="-Infinity" prefHeight="200.0" prefWidth="1510.0">
-                            <children>
-                                <ImageView fitHeight="250.0" fitWidth="500.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../itemtiles/Giochi1.1.png" />
-                                    </image>
-                                </ImageView>
-                                <ImageView fitHeight="250.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../itemtiles/Cornici1.3.png" />
-                                    </image>
-                                </ImageView>
-                                <ImageView fitHeight="250.0" fitWidth="250.0" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../itemtiles/Trofei1.1.png" />
-                                    </image>
-                                </ImageView>
-                            </children>
-                            <VBox.margin>
-                                <Insets />
-                            </VBox.margin>
-                        </HBox>
-                    </children>
-                    <VBox.margin>
-                        <Insets bottom="60.0" />
-                    </VBox.margin>
-                </VBox>
                 <VBox alignment="CENTER" prefHeight="282.0" prefWidth="1510.0">
                     <children>
-                        <Label alignment="CENTER" prefHeight="54.0" prefWidth="330.0" text="IP" textFill="WHITE" styleClass="Text" >
+                        <Label alignment="CENTER" prefHeight="54.0" prefWidth="330.0" styleClass="Text" text="IP" textFill="WHITE">
                             <VBox.margin>
                                 <Insets />
                             </VBox.margin>
@@ -60,7 +29,7 @@
                                 <Font size="30.0" />
                             </font>
                         </TextField>
-                        <Label alignment="CENTER" prefHeight="54.0" prefWidth="330.0" text="PORT" textFill="WHITE" styleClass="Text">
+                        <Label alignment="CENTER" prefHeight="54.0" prefWidth="330.0" styleClass="Text" text="PORT" textFill="WHITE">
                         </Label>
                         <TextField fx:id="port" alignment="CENTER" maxWidth="-Infinity" prefHeight="49.0" prefWidth="300.0" promptText="1243" styleClass="rounded-input" stylesheets="@../css/server_scene.css">
                             <VBox.margin>
@@ -69,7 +38,7 @@
                         </TextField>
                   <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="200.0">
                      <children>
-                              <Button fx:id="tryToConnectButton" mnemonicParsing="false" onMouseClicked="#connect" prefHeight="40.0" prefWidth="250.0" styleClass="button" stylesheets="@../css/server_scene.css" text="CONNECT" >
+                              <Button fx:id="tryToConnectButton" mnemonicParsing="false" onMouseClicked="#connect" prefHeight="40.0" prefWidth="250.0" styleClass="button" stylesheets="@../css/server_scene.css" text="CONNECT">
                            <HBox.margin>
                               <Insets right="10.0" />
                            </HBox.margin>
@@ -82,31 +51,6 @@
                     <cursor>
                         <Cursor fx:constant="DEFAULT" />
                     </cursor>
-                </VBox>
-                <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
-                </VBox>
-                <VBox alignment="BOTTOM_CENTER" prefHeight="301.0" prefWidth="1510.0">
-                    <children>
-                        <HBox alignment="BOTTOM_CENTER" minHeight="-Infinity" prefHeight="198.0" prefWidth="1497.0">
-                            <children>
-                                <ImageView fitHeight="250.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../itemtiles/Piante1.2.png" />
-                                    </image>
-                                </ImageView>
-                                <ImageView fitHeight="334.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../itemtiles/Gatti1.1.png" />
-                                    </image>
-                                </ImageView>
-                                <ImageView fitHeight="250.0" fitWidth="485.0" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../itemtiles/Libri1.2.png" />
-                                    </image>
-                                </ImageView>
-                            </children>
-                        </HBox>
-                    </children>
                 </VBox>
             </children>
         </VBox>
