--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/GameNameList_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/GameNameList_scene.fxml
@@ -4,9 +4,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -15,33 +12,7 @@
     <children>
         <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
             <children>
-                <VBox prefHeight="200.0" prefWidth="100.0">
-                    <children>
-                        <HBox alignment="CENTER" prefHeight="221.0" prefWidth="1510.0">
-                            <children>
-                                <ImageView fitHeight="250.0" fitWidth="500.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../itemtiles/Giochi1.1.png" />
-                                    </image>
-                                </ImageView>
-                                <ImageView fitHeight="250.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../itemtiles/Cornici1.3.png" />
-                                    </image>
-                                </ImageView>
-                                <ImageView fitHeight="250.0" fitWidth="250.0" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../itemtiles/Trofei1.1.png" />
-                                    </image>
-                                </ImageView>
-                            </children>
-                        </HBox>
-                    </children>
-                    <VBox.margin>
-                        <Insets bottom="25.0" />
-                    </VBox.margin>
-                </VBox>
-                <Label alignment="CENTER" prefHeight="67.0" prefWidth="588.0" text="Insert the game you want to join " textFill="WHITE">
+                <Label alignment="CENTER" prefHeight="55.0" prefWidth="588.0" text="Insert the game you want to join " textFill="WHITE">
                     <VBox.margin>
                         <Insets bottom="20.0" />
                     </VBox.margin>
@@ -51,34 +22,14 @@
                   <VBox fx:id="games" prefHeight="307.0" prefWidth="396.0" style="-fx-background-color: transparent;;" />
                </content>
             </ScrollPane>
-                <VBox alignment="CENTER" prefHeight="29.0" prefWidth="1510.0">
-                    <children>
-                  <Button alignment="TOP_LEFT" contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#goBack" prefHeight="50.0" prefWidth="153.0" text="BACK" />
-                    </children>
-                </VBox>
-                <VBox alignment="BOTTOM_CENTER" prefHeight="301.0" prefWidth="1510.0">
-                    <children>
-                        <HBox alignment="BOTTOM_CENTER" prefHeight="273.0" prefWidth="1513.0">
-                            <children>
-                                <ImageView fitHeight="250.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../itemtiles/Piante1.2.png" />
-                                    </image>
-                                </ImageView>
-                                <ImageView fitHeight="334.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../itemtiles/Gatti1.1.png" />
-                                    </image>
-                                </ImageView>
-                                <ImageView fitHeight="250.0" fitWidth="485.0" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../itemtiles/Libri1.2.png" />
-                                    </image>
-                                </ImageView>
-                            </children>
-                        </HBox>
-                    </children>
-                </VBox>
+            <Button alignment="CENTER" contentDisplay="TOP" graphicTextGap="0.0" maxHeight="-Infinity" minHeight="-Infinity" mnemonicParsing="false" onMouseClicked="#goBack" prefHeight="58.0" prefWidth="205.0" text="BACK">
+               <font>
+                  <Font size="17.0" />
+               </font>
+               <padding>
+                  <Insets left="15.0" right="10.0" />
+               </padding>
+            </Button>
             </children>
         </VBox>
     </children>
