--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/GameName_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/GameName_scene.fxml
@@ -4,8 +4,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
@@ -15,33 +13,7 @@
     <children>
         <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
             <children>
-                <VBox prefHeight="200.0" prefWidth="100.0">
-                    <children>
-                        <HBox alignment="CENTER" prefHeight="221.0" prefWidth="1510.0">
-                            <children>
-                                <ImageView fitHeight="250.0" fitWidth="500.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../itemtiles/Giochi1.1.png" />
-                                    </image>
-                                </ImageView>
-                                <ImageView fitHeight="250.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../itemtiles/Cornici1.3.png" />
-                                    </image>
-                                </ImageView>
-                                <ImageView fitHeight="250.0" fitWidth="250.0" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../itemtiles/Trofei1.1.png" />
-                                    </image>
-                                </ImageView>
-                            </children>
-                        </HBox>
-                    </children>
-                    <VBox.margin>
-                        <Insets bottom="60.0" />
-                    </VBox.margin>
-                </VBox>
-                <Label prefHeight="28.0" prefWidth="397.0" text="CHOOSE A NAME FOR YOUR GAME" styleClass="SmallerText">
+                <Label prefHeight="28.0" prefWidth="397.0" styleClass="SmallerText" text="CHOOSE A NAME FOR YOUR GAME">
                     <VBox.margin>
                         <Insets bottom="20.0" />
                     </VBox.margin>
@@ -71,38 +43,6 @@
                   </Button>
                </children>
             </HBox>
-                <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
-                    <children>
-                        <Label fx:id="alreadyTakenGameName" text="INVALID GAME NAME, PLEASE CHOOSE ANOTHER ONE" stylesheets="@../css/globalErrorMessage.css" styleClass="Text"  visible="false">
-                            <font>
-                                <Font name="Libian SC Regular" size="64.0" />
-                            </font>
-                        </Label>
-                    </children>
-                </VBox>
-                <VBox alignment="BOTTOM_CENTER" prefHeight="301.0" prefWidth="1510.0">
-                    <children>
-                        <HBox alignment="BOTTOM_CENTER" prefHeight="273.0" prefWidth="1513.0">
-                            <children>
-                                <ImageView fitHeight="250.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../itemtiles/Piante1.2.png" />
-                                    </image>
-                                </ImageView>
-                                <ImageView fitHeight="334.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../itemtiles/Gatti1.1.png" />
-                                    </image>
-                                </ImageView>
-                                <ImageView fitHeight="250.0" fitWidth="485.0" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../itemtiles/Libri1.2.png" />
-                                    </image>
-                                </ImageView>
-                            </children>
-                        </HBox>
-                    </children>
-                </VBox>
             </children>
         </VBox>
     </children>
