--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/RMIorSocket_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/RMIorSocket_scene.fxml
@@ -5,8 +5,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ToggleGroup?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
@@ -16,33 +14,7 @@
     <children>
         <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
             <children>
-                <VBox prefHeight="200.0" prefWidth="100.0">
-                    <children>
-                        <HBox alignment="CENTER" prefHeight="221.0" prefWidth="1510.0">
-                            <children>
-                                <ImageView fitHeight="250.0" fitWidth="500.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../itemtiles/Giochi1.1.png" />
-                                    </image>
-                                </ImageView>
-                                <ImageView fitHeight="250.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../itemtiles/Cornici1.3.png" />
-                                    </image>
-                                </ImageView>
-                                <ImageView fitHeight="250.0" fitWidth="250.0" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../itemtiles/Trofei1.1.png" />
-                                    </image>
-                                </ImageView>
-                            </children>
-                        </HBox>
-                    </children>
-                    <VBox.margin>
-                        <Insets bottom="60.0" />
-                    </VBox.margin>
-                </VBox>
-                <Label alignment="CENTER" prefHeight="53.0" prefWidth="464.0" text="CHOOSE A CONNECTION TYPE" textFill="WHITE" styleClass="Text">
+                <Label alignment="CENTER" prefHeight="53.0" prefWidth="464.0" styleClass="Text" text="CHOOSE A CONNECTION TYPE" textFill="WHITE">
                     <VBox.margin>
                         <Insets bottom="20.0" />
                     </VBox.margin>
@@ -51,7 +23,7 @@
                     <children>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                             <children>
-                                <RadioButton fx:id="TCP_button" mnemonicParsing="false" prefHeight="40.0" text="TCP (socket)" textFill="WHITE" styleClass="radio-button">
+                                <RadioButton fx:id="TCP_button" mnemonicParsing="false" prefHeight="40.0" styleClass="radio-button" text="TCP (socket)" textFill="WHITE">
                                     <toggleGroup>
                                         <ToggleGroup fx:id="connectionType" />
                                     </toggleGroup>
@@ -59,7 +31,7 @@
                                         <Insets right="50.0" />
                                     </HBox.margin>
                                 </RadioButton>
-                                <RadioButton fx:id="RMI_button" mnemonicParsing="false" prefHeight="40.0" text="RMI" textFill="WHITE" toggleGroup="$connectionType" styleClass="radio-button">
+                                <RadioButton fx:id="RMI_button" mnemonicParsing="false" prefHeight="40.0" styleClass="radio-button" text="RMI" textFill="WHITE" toggleGroup="$connectionType">
                                     <HBox.margin>
                                         <Insets />
                                     </HBox.margin>
@@ -79,33 +51,10 @@
                               <Insets right="20.0" />
                            </HBox.margin>
                         </Button>
-                        <Button fx:id="backButton" mnemonicParsing="false" onMouseClicked="#goBack" prefHeight="56.0" prefWidth="157.0" styleClass="button"  text="BACK" textFill="WHITE">
+                        <Button fx:id="backButton" mnemonicParsing="false" onMouseClicked="#goBack" prefHeight="56.0" prefWidth="157.0" styleClass="button" text="BACK" textFill="WHITE">
                         </Button>
                      </children>
                   </HBox>
-                    </children>
-                </VBox>
-                <VBox alignment="BOTTOM_CENTER" prefHeight="301.0" prefWidth="1510.0">
-                    <children>
-                        <HBox alignment="BOTTOM_CENTER" prefHeight="273.0" prefWidth="1513.0">
-                            <children>
-                                <ImageView fitHeight="250.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../itemtiles/Piante1.2.png" />
-                                    </image>
-                                </ImageView>
-                                <ImageView fitHeight="334.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../itemtiles/Gatti1.1.png" />
-                                    </image>
-                                </ImageView>
-                                <ImageView fitHeight="250.0" fitWidth="485.0" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../itemtiles/Libri1.2.png" />
-                                    </image>
-                                </ImageView>
-                            </children>
-                        </HBox>
                     </children>
                 </VBox>
             </children>
