--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/login_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/login_scene.fxml
@@ -4,9 +4,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -15,33 +12,7 @@
     <children>
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
          <children>
-            <VBox prefHeight="200.0" prefWidth="100.0">
-               <children>
-                  <HBox alignment="CENTER" prefHeight="221.0" prefWidth="1510.0">
-                     <children>
-                              <ImageView fitHeight="250.0" fitWidth="500.0" pickOnBounds="true" preserveRatio="true">
-                                  <image>
-                                      <Image url="@../itemtiles/Giochi1.1.png" />
-                                  </image>
-                              </ImageView>
-                              <ImageView fitHeight="250.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
-                                  <image>
-                                      <Image url="@../itemtiles/Cornici1.3.png" />
-                                  </image>
-                              </ImageView>
-                              <ImageView fitHeight="250.0" fitWidth="250.0" preserveRatio="true">
-                                  <image>
-                                      <Image url="@../itemtiles/Trofei1.1.png" />
-                                  </image>
-                              </ImageView>
-                     </children>
-                  </HBox>
-               </children>
-               <VBox.margin>
-                  <Insets bottom="60.0" />
-               </VBox.margin>
-            </VBox>
-                  <Label prefHeight="54.0" prefWidth="330.0" text="CHOOSE A NICKNAME" textFill="WHITE" stylesheets="@../css/login_scene.css">
+                  <Label prefHeight="54.0" prefWidth="330.0" stylesheets="@../css/login_scene.css" text="CHOOSE A NICKNAME" textFill="WHITE">
                <VBox.margin>
                   <Insets bottom="20.0" />
                </VBox.margin>
@@ -54,37 +25,8 @@
                   <Font size="21.0" />
                </font>
             </TextField>
-                  <Button fx:id="OKButton" mnemonicParsing="false" onMouseClicked="#connect" prefHeight="59.0" prefWidth="156.0" styleClass="button" stylesheets="@../css/server_scene.css" text="OK" >
+                  <Button fx:id="OKButton" mnemonicParsing="false" onMouseClicked="#connect" prefHeight="59.0" prefWidth="156.0" styleClass="button" stylesheets="@../css/server_scene.css" text="OK">
                   </Button>
-            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
-               <children>
-                  <Label fx:id="InvalidNickname" text="INVALID NICKNAME,PLEASE CHOOSE ANOTHER ONE"  stylesheets="@../css/globalErrorMessage.css" styleClass="Text" visible="false" >
-                  </Label>
-               </children>
-            </VBox>
-            <VBox alignment="BOTTOM_CENTER" prefHeight="301.0" prefWidth="1510.0">
-               <children>
-                  <HBox alignment="BOTTOM_CENTER" prefHeight="273.0" prefWidth="1513.0">
-                     <children>
-                              <ImageView fitHeight="250.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
-                                  <image>
-                                      <Image url="@../itemtiles/Piante1.2.png" />
-                                  </image>
-                              </ImageView>
-                              <ImageView fitHeight="334.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
-                                  <image>
-                                      <Image url="@../itemtiles/Gatti1.1.png" />
-                                  </image>
-                              </ImageView>
-                              <ImageView fitHeight="250.0" fitWidth="485.0" preserveRatio="true">
-                                  <image>
-                                      <Image url="@../itemtiles/Libri1.2.png" />
-                                  </image>
-                              </ImageView>
-                     </children>
-                  </HBox>
-               </children>
-            </VBox>
          </children>
       </VBox>
     </children>
