--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/css/lobby_scene.css
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/css/lobby_scene.css
@@ -1,5 +1,5 @@
 .rootPane {
-    -fx-background-image: url("../misc/sfondoparquet.jpg");
+    -fx-background-image: url("../misc/scene_background.png");
     -fx-background-size: stretch;
 }
 
