--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/css/login_scene.css
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/css/login_scene.css
@@ -4,7 +4,7 @@
 }
 
 .rootPane {
-    -fx-background-image: url("../misc/sfondoparquet.jpg");
+    -fx-background-image: url("../misc/scene_background.png");
     -fx-background-size: stretch;
 }
 
