--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
@@ -61,12 +61,20 @@
                                 </GridPane>
                                 <StackPane layoutX="517.0" layoutY="460.0" prefHeight="61.0" prefWidth="64.0" rotate="7.6">
                                     <children>
-                                        <ImageView fitHeight="65.0" fitWidth="62.0" pickOnBounds="true" preserveRatio="true" />
+                                        <ImageView fitHeight="65.0" fitWidth="62.0" pickOnBounds="true" preserveRatio="true" styleClass="scoringToken" >
+                                            <image>
+                                                <Image url="@../scoring%20tokens/end%20game.jpg" />
+                                            </image>
+                                        </ImageView>
                                     </children>
                                 </StackPane>
                                 <AnchorPane fx:id="anchorPaneForTheCandPGoalCards" layoutX="12.0" layoutY="105.0" prefHeight="453.0" prefWidth="609.0" visible="false">
                                     <children>
-                                        <ImageView fx:id="CommonGoalAchieved" fitHeight="431.0" fitWidth="499.0" layoutX="69.0" layoutY="-10.0" styleClass="goalReached" visible="false" />
+                                        <ImageView fx:id="CommonGoalAchieved" fitHeight="431.0" fitWidth="499.0" layoutX="69.0" layoutY="-10.0" styleClass="goalReached" visible="false" >
+                                            <image>
+                                                <Image url="@../scoring%20tokens/scoring_back_EMPTY.jpg" />
+                                            </image>
+                                        </ImageView>
                                         <Text fx:id="CommonGoalText" fill="#e8c77acf" layoutX="158.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Congratulations you have reached the first/second common goal! You will now receive a scoring token.. Keep it up!" visible="false" wrappingWidth="344.74981689453125">
                                             <font>
                                                 <Font name="Libian SC Regular" size="36.0" />
