--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/GameNameList_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/GameNameList_scene.fxml
@@ -12,14 +12,14 @@
     <children>
         <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
             <children>
-                <Label alignment="CENTER" prefHeight="55.0" prefWidth="588.0" text="Insert the game you want to join " textFill="WHITE">
+                <Label alignment="CENTER" prefHeight="67.0" prefWidth="588.0" text="CHOSE THE GAME YOU WANT TO JOIN" stylesheets="@../css/gameNameList_scene.css" styleClass="Text">
                     <VBox.margin>
                         <Insets bottom="20.0" />
                     </VBox.margin>
                 </Label>
             <ScrollPane fx:id="scrollPane" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="247.0" prefWidth="418.0" style="-fx-background-color: transparent;;">
                <content>
-                  <VBox fx:id="games" prefHeight="307.0" prefWidth="396.0" style="-fx-background-color: transparent;;" />
+                  <VBox fx:id="games" prefHeight="307.0" prefWidth="396.0" style="-fx-background-color: transparent;" />
                </content>
             </ScrollPane>
             <Button alignment="CENTER" contentDisplay="TOP" graphicTextGap="0.0" maxHeight="-Infinity" minHeight="-Infinity" mnemonicParsing="false" onMouseClicked="#goBack" prefHeight="58.0" prefWidth="205.0" text="BACK">
