--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/lobby_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/lobby_scene.fxml
@@ -11,20 +11,11 @@
    <children>
       <AnchorPane prefHeight="200.0" prefWidth="200.0">
          <children>
-            <Label layoutX="644.0" layoutY="98.0" text="Waiting" textFill="#fffefe">
-               <font>
-                  <Font name="Libian SC Regular" size="72.0" />
-               </font>
+            <Label layoutX="644.0" layoutY="98.0" prefWidth="272.0" styleClass="Text" stylesheets="@../css/lobby_scene.css" text="WAITING">
             </Label>
-            <Label layoutX="437.0" layoutY="171.0" text="for other players to join.... " textFill="WHITE">
-               <font>
-                  <Font name="Libian SC Regular" size="72.0" />
-               </font>
+            <Label layoutX="437.0" layoutY="171.0" styleClass="Text" stylesheets="@../css/lobby_scene.css" text="FOR OTHER PLAYERS TO JOIN.... ">
             </Label>
-            <Label fx:id="numPinLobby" layoutX="330.0" layoutY="249.0" textFill="WHITE">
-               <font>
-                  <Font name="Libian SC Regular" size="64.0" />
-               </font>
+            <Label fx:id="numPinLobby" layoutX="330.0" layoutY="249.0" styleClass="Text" stylesheets="@../css/lobby_scene.css">
             </Label>
             <ImageView fitHeight="483.0" fitWidth="1084.0" layoutX="210.0" layoutY="39.0">
                <image>
@@ -35,15 +26,9 @@
                <image>
                   <Image url="@../Publisher_material/banner%201386x400px.png" />
                </image></ImageView>
-            <Label fx:id="NumberOfMissingPlayers" alignment="BOTTOM_LEFT" layoutX="380.0" layoutY="328.0" prefHeight="41.0" prefWidth="636.0" text="Missing Players number: " textFill="WHITE" visible="false">
-               <font>
-                  <Font name="Libian SC Regular" size="65.0" />
-               </font>
+            <Label fx:id="NumberOfMissingPlayers" alignment="BOTTOM_LEFT" layoutX="426.0" layoutY="328.0" prefHeight="50.0" prefWidth="678.0" styleClass="Text2" stylesheets="@../css/lobby_scene.css" textAlignment="CENTER" visible="false">
             </Label>
-            <Label fx:id="PlayerJoinedGame" layoutX="431.0" layoutY="271.0" text="Name  joined the Game " textFill="WHITE" visible="false">
-               <font>
-                  <Font name="Libian SC Regular" size="36.0" />
-               </font>
+            <Label fx:id="PlayerJoinedGame" layoutX="431.0" layoutY="271.0" prefHeight="55.0" prefWidth="624.0" styleClass="Text2" stylesheets="@../css/lobby_scene.css" textAlignment="CENTER"  visible="false">
             </Label>
          </children>
       </AnchorPane>
